--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,12 @@
   position: fixed;
   right: 25px;
 }
+
+.fab-danger {
+  border-radius: 100%;
+  bottom: 25px;
+  font-size: 30px;
+  padding: 20px 25px;
+  position: fixed;
+  left: 25px;
+}
